fixed a few minor cosmetic issues with ISUPPORT, and added I to example files.

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.39 2003/06/18 00:58:18 ievil Exp $
+#   $Id: example.conf,v 1.40 2003/08/17 06:01:54 ievil Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -229,6 +229,7 @@ I:NOMATCH::*@*ts*::3
 ##       /die /restart 
 ## P/p - allow/disallow hiding from stats p (recommended used for TCM
 ##       only)
+## I/i - allow/disallow usage of umode +u (recommended used for TCM only)
 ## S/s - allow/disallow usage of OPERSPY related commands.
 ## Z/z - allow/disallow usage of umode Z to see OPERSPY usage.
 ## A/a - this oper is an admin.
