--- a/doc/ircd.conf/olines.conf
+++ b/doc/ircd.conf/olines.conf
@@ -11,11 +11,12 @@
 # A - Server Amdin
 # Z - Can see Oper Spy
 # P - Can hide from stats p
+# I - Oper can use umode +o
 # S - Can use Oper Spy
 #
 # Please use little o:'s still if u use RESTRICT_LOCOP!!
 # 
-# $Id: olines.conf,v 1.1 2003/06/18 01:49:01 ievil Exp $
+# $Id: olines.conf,v 1.2 2003/08/17 06:01:55 ievil Exp $
 
 O:*adm@admin.efnet.server.no:-CryptedPassHere-:admin:GDSUKORPHNAZ:301
 O:*coadm@coadmin.efnet.server.no:-CryptedPassHere-:coadmin:GdSUKORPHNAZ:301
