--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.73 2003/06/14 23:23:41 ievil Exp $
+# $Id: Makefile.in,v 1.74 2003/10/13 11:33:13 ievil Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -52,6 +52,7 @@ SRCS = \
 	m_locops.c \
 	m_ltrace.c \
 	m_lusers.c \
+	m_map.c \
 	m_message.c \
 	m_mode.c \
         m_operspylog.c \
