Added bill's old patch "ip must resolve". It has been requested by several users aswell..

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.40 2003/08/17 06:01:54 ievil Exp $
+#   $Id: example.conf,v 1.41 2004/05/23 16:22:11 ievil Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -188,7 +188,8 @@ I:NOMATCH::*@*ts*::3
 ## = Spoof this users IP, normally only used for opers
 ##
 ## < This user is exempt from idle restrictions if IDLE_CHECK is defined
-##
+## | User can flood
+## \ Users ip must resolve
 
 ## Examples
 ## c) I:NOMATCH::^db@koruna.varner.com::3
