--- a/doc/ircd.conf/ilines.conf
+++ b/doc/ircd.conf/ilines.conf
@@ -1,6 +1,6 @@
 # [efnet.server.no] I-line configuration..
 #
-# $Id: ilines.conf,v 1.1 2003/06/18 01:49:01 ievil Exp $
+# $Id: ilines.conf,v 1.2 2004/05/23 16:22:12 ievil Exp $
 #
 # Flags :
 # = spoof
@@ -11,6 +11,9 @@
 # _ exempt from g-kines
 # - remove ~
 # ! only 1 connection from ip
+# | can flood
+# \ must resolve
+
 
 # Normal users - open I
 #---------------------------------------------
