Implemented Sarisa/Hwy's ETRACE command for hybrid-6 Based the trace partly on ratbox-1.4 outputs.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.74 2003/10/13 11:33:13 ievil Exp $
+# $Id: Makefile.in,v 1.75 2004/05/23 16:25:22 ievil Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -40,6 +40,7 @@ SRCS = \
 	m_die.c \
 	m_encap.c \
 	m_error.c \
+	m_etrace.c \
 	m_gline.c \
 	m_htm.c \
 	m_info.c \
@@ -130,6 +131,7 @@ SRCS = \
 #	m_connect.o \
 #	m_die.o \
 #       m_encap.o \
+#       m_etrace.o \
 #	m_error.o \
 #	m_gline.o \
 #	m_help.o \
