--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.75 2004/05/23 16:25:22 ievil Exp $
+# $Id: Makefile.in,v 1.76 2004/05/23 16:52:51 ievil Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -67,6 +67,7 @@ SRCS = \
 	m_restart.c \
 	m_server.c \
 	m_set.c \
+	m_sinfo.c \
 	m_squit.c \
 	m_stats.c \
 	m_svinfo.c \
@@ -154,6 +155,7 @@ SRCS = \
 #	m_restart.o \
 #	m_server.o \
 #	m_set.o \
+#       m_sinfo.o \
 #	m_squit.o \
 #	m_stats.c \
 #	m_svinfo.o \
