Adding PROPAGATE_AWAY, BURST_AWAY, PART_MESSAGES from Syldra. Patches from Hwy/Sarisa. There will be more of these backports/remerges from Syldra and Hybrid-7 in the next few days. And then we should get back to the releases like we used to. 6.4 cvs have been running nicely for weeks on efnet now ;) Time for 6.4.3..

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.141 2004/05/23 16:16:54 ievil Exp $
+ * $Id: config.h.dist,v 1.142 2004/10/13 00:53:33 ievil Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -711,6 +711,20 @@
  */
 #define OPERSPYLOG
 
+/* PART_MESSAGES - PART can include a comment, IRCnet and Dalnet style
+ * The message will get ignored by servers that do not understand...
+ * Credits:  toot / hwy - ievil
+ */
+#define PART_MESSAGES
+
+
+/* PROPAGATE_AWAY - Propogate AWAY messages to (and from) other servers.
+ * This allows users to see you marked as AWAY on distant servers, without
+ * resorting to using remote WHOIS.  This is standard in Hybrid 7 and
+ * csircd 1.14, so it should be available to Syldra users as well.
+ */
+#define PROPAGATE_AWAY
+
 
 /* ----------------- not approved on EFnet section --------------------
  *
@@ -815,6 +829,14 @@
  *
  */
 #undef RESTRICT_LOCOP
+
+/* BURST_AWAY - If AWAY messages are propagated, then burst them to a
+ * connecting server as well.  Hybrid 7 does NOT do this.
+ *
+ * NOTE:  This will increase your burst size.
+ */
+#undef BURST_AWAY
+
 
 /* -------------- END NOT APPROVED ON EFNET SECTION --------------------- */
 
