--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.143 2004/10/13 03:09:45 ievil Exp $
+ * $Id: config.h.dist,v 1.144 2004/10/13 03:12:35 ievil Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -935,15 +935,6 @@
  */
 #define MAXCHANNELSPERUSER  20  /* Recommended value: 20 */
 
-/* SENDQ_ALWAYS - should always be defined.
- * SendQ-Always causes the server to put all outbound data into the sendq and
- * flushing the sendq at the end of input processing. This should cause more
- * efficient write's to be made to the network.
- * There *shouldn't* be any problems with this method.
- * -avalon
- */
-#define SENDQ_ALWAYS
-
 /* FLUD - CTCP Flood Detection and Protection
  *
  * This enables server CTCP flood detection and protection for local clients.
@@ -1085,6 +1076,10 @@
 
 #if !defined(HAVE_LIBZ) && defined(ZIP_LINKS)
 #error ZIP_LINKS defined put ZLIB not found.  Undef ZIP_LINKS or install ZLIB
+#endif
+
+#if (NICKNAMEHISTORYLENGTH == 0)
+#error NICKNAMEHISTORYLENGTH cannot be set to 0
 #endif
 
 #if defined(OPERSPY) && !defined(OPERSPYLOG)
