--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.77 2004/05/23 21:07:01 ievil Exp $
+# $Id: Makefile.in,v 1.78 2005/09/30 15:58:12 ievil Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -106,7 +106,7 @@ SRCS = \
 	scache.c \
 	send.c \
 	sprintf_irc.c \
-	whowas.c
+	m_whowas.c
 
 #
 # Do it this way for Ultrix, and its portable at least
